<resources>
    <string name="app_name">JoudApp</string>
    <string name="about_us">About Us</string>
    <string name="account_activation">Account Activation</string>
    <string name="first_verification_text">We are sending a verification code to your phone, Enter it below to active your account.</string>
    <string name="verification_code">verification code</string>
    <string name="submit">Submit</string>
    <string name="active_the_card">Activate the card</string>
    <string name="first_verification_card_text">We are sending a verification code to your phone, Enter it below to active your card.</string>
    <string name="please_enter_the_code_of_four_numbers">Please enter the code of four numbers.</string>
    <string name="please_enter_the_card_number">Please Enter The Card Number :</string>
    <string name="enter_card_number">enter card number</string>
    <string name="please_enter_the_phone_number">Please Enter The Phone Number :</string>
    <string name="enter_phone_number">enter phone number</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="region">Region</string>
    <string name="search">Search</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="transfer">Transfer</string>
    <string name="drag_bank_transfer_image">Drag bank transfer image</string>
    <string name="currency">Currency</string>
    <string name="iban_number">IBAN number</string>
    <string name="account_number">Account number</string>
    <string name="beneficiary_name">Beneficiary name</string>
    <string name="bank_name">Bank name</string>
    <string name="cards">Cards</string>
    <string name="payment_system">Payment system</string>
    <string name="expire_subscription">Expire subscription</string>
    <string name="date_of_subscription">Date of subscription</string>
    <string name="card_number">Card number</string>
    <string name="data">Data</string>
    <string name="turn_off_card">Turn Off card</string>
    <string name="activate_card">Activate card</string>
    <string name="order_card">Order Card</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password">Password</string>
    <string name="please_enter_the_new_password">Please Enter Code And New Password :</string>
    <string name="confirm">Confirm</string>
    <string name="contact_us">Contact us</string>
    <string name="_9am_to_5pm">9am to 5pm</string>
    <string name="change_password">Change password</string>
    <string name="change_language">Change language</string>
    <string name="language">Language </string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="branches">Branches :</string>
    <string name="edit_account">Edit account</string>
    <string name="new_phone_number">New phone number</string>
    <string name="save">Save</string>
    <string name="new_password">New password</string>
    <string name="new_email_address">New email address</string>
    <string name="faq">FAQ</string>
    <string name="q">Q : </string>
    <string name="a">A : </string>
    <string name="login_as_visitor">LOGIN AS VISITOR</string>
    <string name="email">Email</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="forget_password">Forget password ?</string>
    <string name="name">Name</string>
    <string name="by_creating_an_account_you_agree_to_our_terms_of_service_and_privacy_policy">By creating an account you agree to our terms of service and privacy policy</string>
    <string name="home">Home</string>
    <string name="stores">Stores</string>
    <string name="purchase_voucher">Purchase voucher</string>
    <string name="turn_off_the_card_text">Turn off the card</string>
    <string name="please_specify_the_reason">Please specify the reason</string>
    <string name="optional">*Optional</string>
    <string name="first_turn_off_card_text">We are sending a verification code to your phone to turn off your card.</string>
    <string name="vouchers_categories">Vouchers categories</string>
    <string name="medical_service">Medical Service</string>
    <string name="restaurant_and_cafe">Restaurant And Cafe</string>
    <string name="fashion">Fashion</string>
    <string name="others">Others</string>
    <string name="my_account">My account</string>
    <string name="phone_verification">Phone verification</string>
    <string name="the_reason_of_turning_off">the reason of turning off</string>
    <string name="visitor">Visitor</string>
    <string name="subscribe">Subscribe</string>
    <string name="phone_number">Phone number</string>
    <string name="edit">Edit</string>
    <string name="full_name">Full Name</string>
    <string name="payment_method">Payment Method</string>
    <string name="request">Request</string>
    <string name="code">code</string>
    <string name="skip">skip</string>
    <string name="Card_Type">Card Type</string>
    <string name="cash">cash</string>


</resources>
