<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    tools:context=".Activity.BankTransferActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentInsetStart="0dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_normal_20"
                android:layout_gravity="top"
                android:background="@color/colorPrimary" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dimen_normal_20"
                android:scaleType="fitXY"
                android:src="@drawable/toolbar" />

            <ImageView
                android:id="@+id/backBtn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="start"
                android:src="@drawable/ic_keyboard_arrow_left_30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dimen_normal_10"
                android:text="@string/bank_transfer"
                android:textColor="@color/customWhite"
                android:textSize="@dimen/dimen_text_18"
                android:textStyle="bold" />
        </FrameLayout>
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_normal_20"
            android:layout_marginTop="@dimen/dimen_normal_30"
            android:layout_marginEnd="@dimen/dimen_normal_20"
            android:orientation="vertical">

            <EditText
                android:id="@+id/bankNameEt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_normal_40"
                android:background="@drawable/edittext_design_white"
                android:hint="@string/bank_name"
                android:inputType="text"
                android:padding="@dimen/dimen_normal_5" />

            <EditText
                android:id="@+id/beneficiaryNameEt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_normal_40"
                android:layout_marginTop="@dimen/dimen_normal_10"
                android:background="@drawable/edittext_design_white"
                android:hint="@string/beneficiary_name"
                android:inputType="text"
                android:padding="@dimen/dimen_normal_5" />

            <EditText
                android:id="@+id/accountNumEt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_normal_40"
                android:layout_marginTop="@dimen/dimen_normal_10"
                android:background="@drawable/edittext_design_white"
                android:hint="@string/account_number"
                android:inputType="number"
                android:padding="@dimen/dimen_normal_5" />

            <EditText
                android:id="@+id/ibanNumEt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_normal_40"
                android:layout_marginTop="@dimen/dimen_normal_10"
                android:background="@drawable/edittext_design_white"
                android:hint="@string/iban_number"
                android:inputType="number"
                android:padding="@dimen/dimen_normal_5" />

            <EditText
                android:id="@+id/currencyEt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_normal_40"
                android:layout_marginTop="@dimen/dimen_normal_10"
                android:background="@drawable/edittext_design_white"
                android:hint="@string/currency"
                android:padding="@dimen/dimen_normal_5" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_normal_40"
                android:layout_marginTop="@dimen/dimen_normal_10"
                android:background="@drawable/edittext_design_white"
                android:padding="@dimen/dimen_normal_5">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_normal_40"
                    android:layout_gravity="center_vertical|start"
                    android:padding="@dimen/dimen_normal_5"
                    android:text="@string/drag_bank_transfer_image"
                    android:textSize="@dimen/dimen_text_18"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/attachImageBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:src="@drawable/ic_attachment_24dp" />
            </FrameLayout>

            <Button
                android:id="@+id/transferBtn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_normal_45"
                android:layout_marginTop="@dimen/dimen_normal_20"
                android:background="@drawable/button_design"
                android:padding="@dimen/dimen_normal_5"
                android:text="@string/transfer"
                android:textAllCaps="false"
                android:textColor="@color/customWhite"
                android:textSize="@dimen/dimen_text_16"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>