<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    tools:context=".Activity.TurnOffCardCodeActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentInsetStart="0dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_normal_20"
                android:layout_gravity="top"
                android:background="@color/colorPrimary" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dimen_normal_20"
                android:scaleType="fitXY"
                android:src="@drawable/toolbar" />

            <ImageView
                android:id="@+id/backBtn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="start"
                android:src="@drawable/ic_keyboard_arrow_left_30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dimen_normal_10"
                android:text="@string/turn_off_card"
                android:textColor="@color/customWhite"
                android:textSize="@dimen/dimen_text_18"
                android:textStyle="bold" />
        </FrameLayout>
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_normal_10"
                android:layout_marginTop="@dimen/dimen_normal_30"
                android:layout_marginEnd="@dimen/dimen_normal_10"
                android:gravity="center"
                android:text="@string/first_turn_off_card_text"
                android:textSize="@dimen/dimen_text_16"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_normal_10"
                android:layout_marginTop="@dimen/dimen_normal_10"
                android:layout_marginEnd="@dimen/dimen_normal_10"
                android:gravity="center"
                android:text="@string/please_enter_the_code_of_four_numbers"
                android:textSize="@dimen/dimen_text_16"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/verifyCodeEt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_normal_45"
                android:layout_marginStart="@dimen/dimen_normal_20"
                android:layout_marginTop="@dimen/dimen_normal_20"
                android:layout_marginEnd="@dimen/dimen_normal_20"
                android:background="@drawable/edittext_design_white"
                android:hint="@string/verification_code"
                android:inputType="number"
                android:padding="@dimen/dimen_normal_10" />

            <Button
                android:id="@+id/submitBtn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_normal_45"
                android:layout_marginStart="@dimen/dimen_normal_20"
                android:layout_marginTop="@dimen/dimen_normal_20"
                android:layout_marginEnd="@dimen/dimen_normal_20"
                android:background="@drawable/button_design"
                android:padding="@dimen/dimen_normal_5"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@color/customWhite"
                android:textSize="@dimen/dimen_text_16"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>