<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    tools:context=".Activity.EditAccountActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentInsetStart="0dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_normal_20"
                android:layout_gravity="top"
                android:background="@color/colorPrimary" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dimen_normal_20"
                android:scaleType="fitXY"
                android:src="@drawable/toolbar" />

            <ImageView
                android:id="@+id/backBtn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="start"
                android:src="@drawable/ic_keyboard_arrow_left_30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dimen_normal_10"
                android:text="@string/edit_account"
                android:textColor="@color/customWhite"
                android:textSize="@dimen/dimen_text_18"
                android:textStyle="bold" />
        </FrameLayout>
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_normal_30"
            android:layout_marginEnd="@dimen/dimen_normal_30"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <FrameLayout
                android:layout_marginTop="@dimen/dimen_normal_30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profileIv"
                    android:layout_width="@dimen/dimen_normal_130"
                    android:layout_height="@dimen/dimen_normal_130"
                    android:layout_gravity="center"
                    android:background="@drawable/circle_layout"
                    android:src="@drawable/ic_person_24dp"
                    android:visibility="visible" />

                <ImageView
                    android:layout_gravity="bottom|end"
                    android:layout_marginBottom="@dimen/dimen_normal_5"
                    android:layout_marginEnd="@dimen/dimen_normal_10"
                    android:layout_width="@dimen/dimen_normal_24"
                    android:layout_height="@dimen/dimen_normal_24"
                    android:src="@drawable/ic_add_circle_outline_24dp"
                    android:background="@drawable/circle_white"/>
            </FrameLayout>


            <EditText
                android:id="@+id/phoneEt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_normal_40"
                android:layout_marginTop="@dimen/dimen_normal_15"
                android:background="@drawable/edittext_design_white"
                android:hint="@string/new_phone_number"
                android:inputType="phone"
                android:padding="@dimen/dimen_normal_10" />

            <EditText
                android:id="@+id/emailEt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_normal_40"
                android:layout_marginTop="@dimen/dimen_normal_15"
                android:background="@drawable/edittext_design_white"
                android:hint="@string/new_email_address"
                android:inputType="textEmailAddress"
                android:padding="@dimen/dimen_normal_10" />

            <EditText
                android:id="@+id/passwordEt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_normal_40"
                android:layout_marginTop="@dimen/dimen_normal_15"
                android:background="@drawable/edittext_design_white"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:padding="@dimen/dimen_normal_10" />

            <EditText
                android:id="@+id/conformPasswordEt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_normal_40"
                android:layout_marginTop="@dimen/dimen_normal_15"
                android:background="@drawable/edittext_design_white"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="@dimen/dimen_normal_10" />

            <Button
                android:id="@+id/saveBtn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_normal_45"
                android:layout_marginTop="@dimen/dimen_normal_50"
                android:background="@drawable/button_design"
                android:padding="@dimen/dimen_normal_5"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/customWhite"
                android:textSize="@dimen/dimen_text_16"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>