<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_one"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    tools:context=".Activity.ChangePasswordActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentInsetStart="0dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_normal_20"
                android:layout_gravity="top"
                android:background="@color/colorPrimary" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dimen_normal_20"
                android:scaleType="fitXY"
                android:src="@drawable/toolbar" />

            <ImageView
                android:id="@+id/backBtn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="start"
                android:src="@drawable/ic_keyboard_arrow_left_30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dimen_normal_10"
                android:text="@string/change_password"
                android:textColor="@color/customWhite"
                android:textSize="@dimen/dimen_text_18"
                android:textStyle="bold" />
        </FrameLayout>
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_normal_10"
            android:layout_marginEnd="@dimen/dimen_normal_10"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_normal_50"
                android:background="@android:color/white"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_normal_40"
                    android:background="@drawable/edittext_design_white"
                    android:gravity="center_vertical"
                    android:padding="@dimen/dimen_normal_5"
                    android:text="@string/please_enter_the_new_password"
                    android:textSize="@dimen/dimen_text_18"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_normal_2"
                    android:layout_marginTop="@dimen/dimen_normal_5"
                    android:background="@color/hintGray" />

                <EditText
                    android:id="@+id/codeEt"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_normal_40"
                    android:layout_marginTop="@dimen/dimen_normal_5"
                    android:background="@drawable/edittext_design_white"
                    android:hint="@string/code"
                    android:inputType="number"
                    android:padding="@dimen/dimen_normal_5" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_normal_2"
                    android:layout_marginTop="@dimen/dimen_normal_5"
                    android:background="@color/hintGray" />

                <EditText
                    android:id="@+id/passwordEt"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_normal_40"
                    android:layout_marginTop="@dimen/dimen_normal_5"
                    android:background="@drawable/edittext_design_white"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="@dimen/dimen_normal_5" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_normal_2"
                    android:layout_marginTop="@dimen/dimen_normal_5"
                    android:background="@color/hintGray" />

                <EditText
                    android:id="@+id/confirmPasswordEt"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_normal_40"
                    android:layout_marginTop="@dimen/dimen_normal_5"
                    android:layout_marginEnd="@dimen/dimen_normal_5"
                    android:background="@drawable/edittext_design_white"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:padding="@dimen/dimen_normal_5" />
            </LinearLayout>

            <Button
                android:id="@+id/confirmBtn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_normal_45"
                android:layout_marginTop="@dimen/dimen_normal_50"
                android:background="@drawable/button_design"
                android:padding="@dimen/dimen_normal_5"
                android:text="@string/confirm"
                android:textAllCaps="false"
                android:textColor="@color/customWhite"
                android:textSize="@dimen/dimen_text_16"
                android:textStyle="bold" />
        </LinearLayout>

    </ScrollView>
</LinearLayout>